[workspace]
members = [
    "handle",
    "main",
]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2021"
authors = ["Petr Seifert <hello@peterrock.dev"]

[workspace.dependencies]
anyhow = "1.0.75"
arboard = "3.3.0"
env_logger = "0.10.0"
log = "0.4.27"
obfstr = "0.4.4"
raw_struct = { version = "0.1.3" }
vtd-libum = { git = "https://github.com/Valthrun/valthrun-driver", rev = "bc88b65" } 
winapi = { version = "0.3.9", features = ["winuser"] }
windows-sys = { version = "0.48", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.14"