[package]
name = "re-class"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
arboard.workspace = true
env_logger.workspace = true
log.workspace = true
obfstr.workspace = true
raw_struct.workspace = true
vtd-libum.workspace = true
winapi.workspace = true
windows-sys.workspace = true
serde.workspace = true
serde_json.workspace = true
rfd.workspace = true

handle = { path = "../handle" }

# GUI
eframe = { version = "0.27" }
