[package]
name = "re-class"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
arboard.workspace = true
egui.workspace = true
eframe.workspace = true
env_logger.workspace = true
log.workspace = true
obfstr.workspace = true
raw_struct.workspace = true
vtd-libum.workspace = true
winapi.workspace = true
windows-sys.workspace = true

handle = { path = "../handle" }
